# properpy

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
properpy/: __init__.py  library.py  module_guard.py  parser.py
test/test_html/: config.proper.py  config_schema.py  test.py
test/test_html2/: config.proper.py  config_schema.py  test.py
test/test_library/: test.py
